# stargazer_sensor_fusion

./: CMakeLists.txt  README.md  ReadMe.md  lidar_demo.m  package.xml  test.py
config/: map.yaml  sino_map.yaml  stargazer.yaml  stargazer_init.yaml
independent_research/odg_pf/: CMakeLists.txt  package.xml
independent_research/odmgpf/: CMakeLists.txt  package.xml
independent_research/vrep_holonomic_pf/: CMakeLists.txt  package.xml
laser_values/src/: scan.py
launch/: ekf_template.launch  stargazer.launch
msg/: MarkerPose.msg  MarkerPoses.msg  MarkerRawPose.msg  MarkerRawPoses.msg
optitrack_tf/: 200729_optitrack_preprocessing.txt  CMakeLists.txt  README.md  package.xml
optitrack_tf/launch/: opti_tf.launch
optitrack_tf/nodes/: optitrack_tf_broadcaster.py
params/: ekf_template.yaml
robot_localization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robot_localization/doc/: integrating_gps.rst
robot_localization/launch/: dual_ekf_navsat_example.launch  ekf_template.launch
robot_localization/params/: dual_ekf_navsat_example.yaml  ekf_template.yaml
scripts/: stargazer_publisher.py  test.py
servicesim/: .hgtags
stargazer/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
stargazer/config/: map.yaml  sino_map.yaml  stargazer.yaml  stargazer_init.yaml
stargazer/launch/: stargazer.launch
stargazer/msg/: InitPose.msg  MarkerPose.msg  MarkerPoses.msg  MarkerRawPose.msg  MarkerRawPoses.msg
stargazer/scripts/: initial_state.py  stargazer_publisher.py  test.py
stargazer/src/stargazer/: __init__.py  stargazer.py
(+752 files in other folders)
